# Zaid-FX-MOD

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  release-notes.md  support.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-fps-bypass.yml  build.yml
docs/: GEODE_INDEX.md  RELEASES.md  ROADMAP.md
fps-bypass/: CMakeLists.txt  README.md  mod.json  release-notes.md
fps-bypass/src/: main.cpp
resources/shaders/: color-grade.frag  final.frag  fullscreen.vert  lighting.frag  passthrough.frag
src/: main.cpp
src/recording/: .keep  RecorderControls.cpp  ScreenRecorder.cpp  ScreenRecorder.hpp
src/rendering/: PostProcessPipeline.cpp  PostProcessReactive.cpp  PostProcessRenderer.cpp  PostProcessRenderer.hpp  PostProcessUniforms.cpp  ShaderProgram.cpp  ShaderProgram.hpp
src/settings/: ActionSetting.cpp  PresetManager.cpp  PresetManager.hpp  Settings.cpp  Settings.hpp
